@@ -47,7 +47,7 @@
 	<part id="reference">
 		<title>Reference Documentation</title>
 
-		<xi:include href="https://raw.github.com/spring-projects/spring-data-commons/1.7.0.RELEASE/src/docbkx/repositories.xml">
+		<xi:include href="https://raw.github.com/spring-projects/spring-data-commons/1.7.1.RELEASE/src/docbkx/repositories.xml">
 			<xi:fallback href="../../../spring-data-commons/src/docbkx/repositories.xml" /> 
 		</xi:include>
 
@@ -58,12 +58,12 @@
 	<part id="appendix">
 		<title>Appendix</title>
 		<xi:include
-			href="https://raw.github.com/spring-projects/spring-data-commons/1.7.0.RELEASE/src/docbkx/repository-namespace-reference.xml">
+			href="https://raw.github.com/spring-projects/spring-data-commons/1.7.1.RELEASE/src/docbkx/repository-namespace-reference.xml">
 			<xi:fallback
 				href="../../../spring-data-commons/src/docbkx/repository-namespace-reference.xml" />
 		</xi:include>
 		<xi:include
-			href="https://raw.github.com/spring-projects/spring-data-commons/1.7.0.RELEASE/src/docbkx/repository-query-keywords-reference.xml">
+			href="https://raw.github.com/spring-projects/spring-data-commons/1.7.1.RELEASE/src/docbkx/repository-query-keywords-reference.xml">
 			<xi:fallback
 				href="../../../spring-data-commons/src/docbkx/repository-query-keywords-reference.xml" />
 		</xi:include>
