@@ -1,4 +1,4 @@
-Spring Data Solr 1.1 GA
+Spring Data Solr 1.1.1 GA
 Copyright (c) [2013-2014] Pivotal Software, Inc.
 
 This product is licensed to you under the Apache License, Version 2.0 (the "License").  
